update to java 21 (#10)